Add Create_new_images Resizing_an_image

--- a/Images/CMakeLists.txt
+++ b/Images/CMakeLists.txt
@@ -3,4 +3,4 @@ cmake_minimum_required(VERSION 3.15)
 project(${PROJECT_NAME} LANGUAGES CXX)
 
 add_subdirectory(Application_Sunglasses_Filter)
-
+add_subdirectory(Basic_Image_Operations)
