--- a/LearnOpenCV_com/CMakeLists.txt
+++ b/LearnOpenCV_com/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.25)
 project("")
 get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
+message("==========================================================")
 message("CMAKE_CURRENT_SOURCE_DIR =>PROJECT_NAME=> " ${PROJECT_NAME})
+message("==========================================================")
 
 project(${PROJECT_NAME})
 
