Add Image Annotation

--- a/Images/CMakeLists.txt
+++ b/Images/CMakeLists.txt
@@ -4,3 +4,4 @@ project(${PROJECT_NAME} LANGUAGES CXX)
 
 add_subdirectory(Application_Sunglasses_Filter)
 add_subdirectory(Basic_Image_Operations)
+add_subdirectory(Image_Annotation)
