--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,8 @@ set(PROJECT_NAME ${MY_NAME} )
 
 project(${PROJECT_NAME} LANGUAGES CXX)
 
-add_subdirectory(Images)
+add_subdirectory(Images_Video)
 add_subdirectory(Control)
+
 add_subdirectory(LearnOpenCV_com)
 
