--- a/Images_Video/CMakeLists.txt
+++ b/Images_Video/CMakeLists.txt
@@ -5,3 +5,4 @@ project(${PROJECT_NAME} LANGUAGES CXX)
 add_subdirectory(Application_Sunglasses_Filter)
 add_subdirectory(Basic_Image_Operations)
 add_subdirectory(Image_Annotation)
+add_subdirectory(Video)
