--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ project(${PROJECT_NAME} LANGUAGES CXX)
 
 add_subdirectory(Images_Video)
 add_subdirectory(Control)
+add_subdirectory(ImplementationOfMorphologicalOperations)
 
 add_subdirectory(LearnOpenCV_com)
+
 
