--- a/LearnOpenCV_course/CMakeLists.txt
+++ b/LearnOpenCV_course/CMakeLists.txt
@@ -7,5 +7,8 @@ set(PROJECT_NAME ${MY_NAME} )
 
 project(${PROJECT_NAME} LANGUAGES CXX)
 
-add_subdirectory(LearnOpenCV_com)
-add_subdirectory(LearnOpenCV_course)
+add_subdirectory(ColorSpaces)
+add_subdirectory(Control)
+add_subdirectory(Images_Video)
+add_subdirectory(ImplementationOfMorphologicalOperations)
+
