Add chapter Keypoints_and_Descriptors

--- a/LearnOpenCV_course/CMakeLists.txt
+++ b/LearnOpenCV_course/CMakeLists.txt
@@ -11,5 +11,6 @@ add_subdirectory(Color)
 add_subdirectory(Control)
 add_subdirectory(Image_Analysis)
 add_subdirectory(Images_Video)
+add_subdirectory(Keypoints_and_Descriptors)
 add_subdirectory(Filters_and_convolution)
 
